# roboscholar

./: pyproject.toml
.cursor/: settings.json
app/: auth.py  config.py  db.py  main.py
app/templates/: base.html  dashboard.html  home.html  leaderboard.html  login.html  paper_detail.html  quiz.html  quiz_result.html  signup.html
scripts/: clear_template_questions.sql  create_auth_tables.sql  create_progress_tables.sql  create_quiz_tables.sql  create_tables.sql  extract_summaries.py  generate_quizzes.py  run_sql.py  seed_group1.py  seed_group2.py  seed_group3.py  seed_group4.py  seed_papers.py  seed_peer_reviews_1.py  seed_peer_reviews_2.py  seed_peer_reviews_3.py  seed_quality_content.py  seed_quality_content_v2.py  seed_reading_guides.py  serve_dev.sh  serve_tunnel.sh
