[project]
name = "roboscholar"
version = "0.1.0"
description = "Gamified robotics paper learning platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
    "anthropic>=0.39.0",
]
